--- a/cv_12/dvora135_EMB-cv_12.tex
+++ b/cv_12/dvora135_EMB-cv_12.tex
@@ -216,7 +216,7 @@
 \label{chap:seznam_pristroju}
 \begin{enumerate}
   \item Laboratorní zdroj Agilent
-  \item Digitální voltmetr HP 34401A
+  \item Digitální voltmetr HP 34401A \var{\pm}{} 0,0050 \% údaje \var{\pm}{} 0,0035 \% rozsahu
 \end{enumerate}
 
 
