--- a/cv_13/dvora135_EMB-cv_13.tex
+++ b/cv_13/dvora135_EMB-cv_13.tex
@@ -96,6 +96,10 @@
 \newcommand{\tohm}{$\Omega$}
 \newcommand{\tmu}{$\mu$}
 \newcommand{\var}[2]{$#1_\text{#2}$}
+\newcommand{\larrow}{$\leftarrow~$}
+\newcommand{\rarrow}{$\rightarrow~$}
+\newcommand{\rrarrow}{$\longrightarrow~$}
+\newcommand{\llarrow}{$\longleftarrow~$}
 
 
 %_______________________________________________________________________________________%
@@ -157,11 +161,6 @@
 
 %------------------------------------ VLASTNÍ TEXT ------------------------------------%
 
-\textit{tohle je italikou} \textbf{tohle je tučně} \underline{tohle je podtrženo}
-
-\section{blabla bla gkl}
-\subsection{bdfbshgkjdgnr}
-\subsubsection{ngjsngjrngjs,tng}
 
 
 \section{Úkol měření}
@@ -169,7 +168,7 @@
 \begin{enumerate}
     \item 
     \begin{enumerate}[label=\alph*)]
-        \item  Zapojte převodník R → U s operačním zesilovačem podle schématu na obr. 1 (\var{U}{r} = 10 V, \var{R}{N1} = 10 k\tohm) a změřte závislost fp odporu snímače na jeho úhlové výchylce \var{\alpha} v rozsahu \var{\alpha}{} = 0 až 180° po 15° (klidové poloze snímače \var{\alpha} = 90° odpovídá hodnota odporu \var{R}{0}, tj. \var{\Delta}{}\var{R}{}~=~0).
+        \item  Zapojte převodník R \rarrow U s operačním zesilovačem podle schématu na obr. 1 (\var{U}{r} = 10 V, \var{R}{N1} = 10 k\tohm) a změřte závislost fp odporu snímače na jeho úhlové výchylce \var{\alpha} v rozsahu \var{\alpha}{} = 0 až 180° po 15° (klidové poloze snímače \var{\alpha} = 90° odpovídá hodnota odporu \var{R}{0}, tj. \var{\Delta}{}\var{R}{}~=~0).
     \item Odporový snímač zapojte do Wheatstoneova můstku napájeného ze zdroje napětí \var{U}{AC} = 5~V (obr. 2). Můstek vyvažte odporovou dekádou \var{R}{D} pro hodnotu \var{\alpha}{} = 90° a změřte závislost \var{f}{MN} výstupního napětí \var{U}{BD} na změně úhlu \textalpha, tj. na změně odporu ∆R (pro stejné hodnoty \textalpha\ jako v bodě 1). Odvoďte teoretický vztah pro toto napětí, tj.
     \end{enumerate}
     \begin{equation}
