list of used devices

--- a/cv_13/dvora135_EMB-cv_13.tex
+++ b/cv_13/dvora135_EMB-cv_13.tex
@@ -217,7 +217,19 @@
 
 \section{Seznam použitých přístrojů}
 \label{chap:seznam_pristroju}
-
+\begin{table}
+  \begin{tabular}{ll}
+    Př 1 & - přípravek s operačním zesilovačem\\
+    Př 2 & - přípravek s dvojicí rezistorů\\
+    Př 3 & - přípravek s odporovým snímačem úhlu\\
+    \var{\text{Z}}{1} & - napájecí zdroj operačního zesilovače\\
+    \var{\text{Z}}{1} & - číslicově řízený zdroj ss napětí \var{\text{U}}{Z}\\
+    ČV & - číslicový voltmetr typ: Agilent 34401A\\
+    \var{\text{R}}{N1} & - rezistor 10~k\tohm\\
+    \var{\text{R}}{N1} & - rezistor 1~k\tohm\\
+    \var{\text{R}}{D} & - odporová dekáda
+  \end{tabular}
+\end{table}
 
 
 \section{Teoretický úvod}
