--- a/cv_15/dvora135_EMB-cv_15.tex
+++ b/cv_15/dvora135_EMB-cv_15.tex
@@ -236,8 +236,10 @@ Naměřené hodnoty jsou zanesené v tabulce níže
   1,7 & 9,91  & 1550 \\ \hline
   \end{tabular}
 \end{table}
-
-
+$U_2$ spočítáme jako
+\begin{equation}
+  U_2 = B_m\cdot 4,44 \cdot f\cdot N_2\cdot S_Fe
+\end{equation}
 
 \section{Zpracování naměřených hodnot}
 \label{chap:zpracovani_hodnot}
