--- a/cv_14/dvora135_EMB-cv_14.tex
+++ b/cv_14/dvora135_EMB-cv_14.tex
@@ -211,11 +211,26 @@ Pro měření reálné a imaginární složky výstupního napětí $\hat{U_\tex
 
 \section{Naměřené hodnoty}
 \label{chap:namerene_hodnoty}
+Naměřené hodnoty jsou v tabulce níže
+
+\begin{table}[h!]
+  \centering
+  \begin{tabular}{|c|c|c|c|c|}
+  \hline
+  \multicolumn{5}{|c|}{Cívka}       \\ \hline
+  f[Hz]     & R[\tohm]    & U[V]    & Re[V]   & Im[V]   \\ \hline
+  159,2 & 100  & 1,03    & 0,02 & 0,66 \\ \hline\hline
+  \multicolumn{5}{|c|}{Kondenzátor} \\ \hline
+  f[Hz]     & R[\tohm]    & U[V]    & Re[V]   & Im[V]   \\ \hline
+  159,2 & 1000 & 1,02 & 26,6 & 1,01 \\ \hline
+  \end{tabular}
+  \end{table}
 
 
 
 \section{Zpracování naměřených hodnot}
 \label{chap:zpracovani_hodnot}
+
 
 
 
