--- a/cv_14/dvora135_EMB-cv_14.tex
+++ b/cv_14/dvora135_EMB-cv_14.tex
@@ -204,6 +204,10 @@ Pro měření reálné a imaginární složky výstupního napětí $\hat{U_\tex
 \begin{equation}
   \begin{split}
     \hat{I}_\text{YX} &= -\hat{I}_\text{RN}\\
+    \frac{\hat{U}_\text{1}}{\hat{Z}_\text{1}} &= -\frac{\hat{U}_2}{R_\text{N}}\\
+    \text{Re}\{\hat{Z}_\text{X}\} &= R_\text{X}\\
+    G_\text{X} &= -\frac{\text{Re}\{U_2\}}{R_\text{N} U_\text{1}}\\
+    \text{Im}\{\hat{Z}_\text{X}\} &= \frac{1}{\omega C_\text{x}}\\
     &\dots\\
     C_\text{x} &= -\frac{Im\{\hat{U}_\text{2}\}}{\omega R_\text{N}{U}_\text{1}}
   \end{split}
